--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@matrix-io/matrix-lite-nfc",
   "version": "0.0.0",
-  "description": "> Under Very Early Development",
+  "description": "> Read and Write to NFC tags with a MATRIX Creator!",
   "main": "index.js",
   "gypfile": true,
   "scripts": {
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/matrix-io/matrix-lite-nfc-js#readme",
   "dependencies": {
-    "@matrix-io/matrix-lite": "^0.4.3",
     "nan": "^2.14.0",
     "node-gyp": "^5.0.2"
   }
